--- a/app/views/product_types/index.html.erb
+++ b/app/views/product_types/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Наше меню</h1>
+<h1>Наше меню: редактирование</h1>
 
 Для добавления нового блюда или редактирования раздела войдите в нужную категорию меню<br/>
 
