--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,1 +1,5 @@
---------- меню админа -------------
+--------- меню админа -------------<br/>
+<div class="btn-group" role="group">
+  <%= link_to 'Заказы одиночные', single_orders_path, class: "btn btn-primary", style: "color: white" %>
+  <%= link_to 'Заказы групповые', single_orders_path, class: "btn btn-primary", style: "color: white" %>
+</div> 
