--- a/app/views/group_orders_admin/index.html.erb
+++ b/app/views/group_orders_admin/index.html.erb
@@ -5,10 +5,9 @@
     <thead>
       <tr>
         <th>ID заказа</th>
-        <th>Заказчики</th>
         <th>Комментарии к заказу</th>
         <th>Стоимость, грн</th>
-        <th></th>
+        <th>Детализация</th>
       </tr>
     </thead>
 
