--- a/app/views/group_orders_admin/show.html.erb
+++ b/app/views/group_orders_admin/show.html.erb
@@ -1,2 +1,3 @@
-<h1>GroupOrdersAdmin#show</h1>
-<p>Find me in app/views/group_orders_admin/show.html.erb</p>
+<h1>Детализация группового заказа по заказчикам</h1>
+
+<%= @pull_users.inspect %>
