--- a/app/views/group_orders_admin/_order_by_users.html.erb
+++ b/app/views/group_orders_admin/_order_by_users.html.erb
@@ -1,7 +1,7 @@
 <thead>
   <th colspan="4">Заказчик: <%= user.name %>, <%= user.email %></th>
 </thead>
-
+<% price = 0 %>
 <% user.group_line_items.where(group_order_id: @group_order.id).each do |item| %>
   <tr>
     <td><%= item.product.title %></td>
@@ -9,8 +9,9 @@
     <td><%= my_number_to_currency(item.product.price) %> x <%= item.quantity %> шт</td>
     <td><%= my_number_to_currency(item.product.price * item.quantity) %></td>
   </tr>
+  <% price += (item.product.price * item.quantity) %>
 <% end %>
-  <tr>
-  	<th colspan="3">Сумма с посетителя:</th>
-  	<th></th>
-  </tr>
+<tr>
+  <th colspan="3">Сумма с посетителя:</th>
+  <th><%= my_number_to_currency(price) %></th>
+</tr>
