add dish function

--- a/app/views/group_orders_admin/_group_order.html.erb
+++ b/app/views/group_orders_admin/_group_order.html.erb
@@ -3,7 +3,7 @@
   <th><%= group_order.notice %></th>
   <th><%= group_order.price %></th>
   <th>
-  	<%= link_to 'по пользователям', group_orders_admin_path(group_order) %> |
-по блюдам
+  	<%= link_to 'по пользователям', group_orders_admin_path(group_order, how_to_view: 'by_user') %> |
+  	<%= link_to 'по блюдам', group_orders_admin_path(group_order, how_to_view: 'by_dish') %>
   </th>
 </tr>
