find works method by hash

--- a/app/views/group_orders_admin/_order_by_dish.html.erb
+++ b/app/views/group_orders_admin/_order_by_dish.html.erb
@@ -2,9 +2,9 @@
 </thead>
 <%# dish.each do |i| %>
   <tr>
-    <td><%#= dish[0][:product].title %></td>
+    <td><%= dish[:product].title %></td>
     <td><%#= item.product.description %></td>
-    <td><%#= my_number_to_currency(item.product.price) %> x <%#= item.quantity %> шт</td>
+    <td><%#= my_number_to_currency(item.product.price) %> x <%= dish[:quantity] %> шт</td>
     <td><%#= my_number_to_currency(item.product.price * item.quantity) %></td>
   </tr>
   <%# price += (item.product.price * item.quantity) %>
