--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <!-- моя зона отладки -->
     <%# if Rails.env.development? %> 
       <%= @pull_users.inspect %><br/>
-      <%#= @group_cart.inspect %><br/>
+      <%= @a.inspect %><br/>
       <%#= @group_order.inspect %><br/>
       <%#= @my_group_order.inspect %><br/>
     <%# end %>
