--- a/app/views/group_orders_admin/_show_by_dish.html.erb
+++ b/app/views/group_orders_admin/_show_by_dish.html.erb
@@ -1,14 +1,11 @@
-<%= @dish.inspect %>
-=======
 <h3>Детализация по заказанным блюдам</h3>
-<%= @dish.inspect %>
 
 <div id="group-orders-table">
   <table class="table table-border table-hover table-striped">
 
-    <%= render partial: 'group_orders_admin/order_by_dish', collection: @dish, as: 'dish' %>
+    <%= render partial: 'group_orders_admin/order_by_dish', collection: @group_dishes, as: 'dish' %>
   <tr>
-    <th colspan="3"><h4>Итого</h4></th>
+    <th colspan="3"><h4>Итого:</h4></th>
     <th><h4><%= my_number_to_currency(@group_order.price) %></h4></th>
   </tr>
 
