--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,8 @@
     <%= debug(params) if Rails.env.development? %> 
     <!-- моя зона отладки -->
     <%# if Rails.env.development? %> 
-      <%= @pull_users.inspect %><br/>
-      <%= @a.inspect %><br/>
+      <%#= @pull_users.inspect %><br/>
+      <%#= @a.inspect %><br/>
       <%#= @group_order.inspect %><br/>
       <%#= @my_group_order.inspect %><br/>
     <%# end %>
