--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,2 +1,18 @@
-<%= order.product.title %> - <%= order.quantity %> шт - 
-<%= my_number_to_currency(order.product.price * order.quantity) %><br/>
+<tr>
+  <th>
+  	<%= order.id %>
+  </th>
+  <th>
+  	Имя: <%= order.name %><br/>
+  	email: <%= order.email %>
+  </th>
+  <th>
+  	<%= order.notice %>
+  </th>
+    <th>
+  	<%= order.price %>
+  </th>
+  <th>
+  	<%= link_to 'Просмотр', single_order_path(order) %>
+  </th>
+</tr>
