--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,33 +1,22 @@
-<p id="notice"><%= notice %></p>
+<h1>Просмотр сделанных мной заказов заказов</h1>
 
-<h1>Orders</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Notice</th>
-      <th>Pay type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @orders.each do |order| %>
+<div id="single-orders_table">
+  <table class="table table-border table-hover">
+    <thead>
       <tr>
-        <td><%= order.name %></td>
-        <td><%= order.email %></td>
-        <td><%= order.notice %></td>
-        <td><%= order.pay_type %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>ID заказа</th>
+        <th>Заказчик</th>
+        <th>Комментарии к заказу</th>
+        <th>Стоимость, грн</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Order', new_order_path %>
+  <!-- рендерим через партиал заказы -->
+  <% if @orders %>
+    <%= render partial: 'orders/order', collection: @orders, as: 'order' %>
+  <% end %>
+  </table>
+</div>
+<br/>
+<%= link_to "Назад", store_index_path %>
