--- a/app/views/store/show.html.erb
+++ b/app/views/store/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Наше меню по категориям: <%= @product_type.title %></h1> - для юзеров
+<h1>Наше меню по категориям: <%= @product_type.title %></h1>
 
 <br/>
 
