--- a/app/views/group_store/index.html.erb
+++ b/app/views/group_store/index.html.erb
@@ -2,8 +2,9 @@
 
 <br/>
 
-Текущая группа: <%= @group.name %> | 
-<%= link_to 'Заказ группы', group_cart_path(group_id: @group.id, id: @group_cart.id)  %>
+<b>Текущая группа: <%= @group.name %> | </b>
+<%= link_to 'Заказ группы', group_cart_path(group_id: @group.id, id: @group_cart.id)  %> | 
+<%= link_to 'Выйти из группового заказа', root_path %>
 <br/>
 
 <hr/>
