--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Groups</h1>
+<h1>Просмотр оформленных заказов групп</h1>
 
-<table>
+<table class="table table-border table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>User</th>
+      <th>Название группы</th>
+      <th>Члены группы</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,12 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
-        <td><%= group.user %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <% group.members.each do |member| %>
+            <%= member.user.name + '  ' %>
+          <% end %>
+        </td>
+        <td><%= link_to 'Подробнее', group %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Group', new_group_path %>
+<%= link_to 'Назад', :back %>
