--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,8 @@
         </li>
       <% end %>
 
-      <% if user_signed_in? %>
+      <% if user_login %>
+
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Здравствуйте, <%= current_user.name %>
@@ -49,6 +50,11 @@
             <%= link_to 'Мои оформленные заказы по группам', groups_path, class: "dropdown-item" %>
           </div>
         </div>
+
+      <% elsif current_user.admin %>
+        <li class="nav-item">
+          Вы вошли как администратор  |
+        </li>
         
         <li class="nav-item">
           <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: "btn btn-primary btn-sm active" %>
