--- a/app/views/product_types/index.html.erb
+++ b/app/views/product_types/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Наше меню: редактирование</h1>
 
+<%= link_to "Экспорт меню в CSV", product_types_path(format: "csv") %> <br/>
+
 Для добавления нового блюда или редактирования раздела войдите в нужную категорию меню<br/>
 
 <%= link_to 'Все меню |', product_types_path %>
