normalise export menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-      <% elsif current_user.admin %>
+      <% elsif user_login and current_user.admin %>
         <li class="nav-item">
           Вы вошли как администратор  |
         </li>
