add export single orders

--- a/app/views/single_orders/index.html.erb
+++ b/app/views/single_orders/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Просмотр всех одиночных заказов</h1>
+<%= link_to 'Экспорт одиночных заказов в CSV', single_orders_path(format: "csv") %>
 
 <div id="single-orders_table">
   <table class="table table-border table-hover">
