--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,6 +1,6 @@
 ------------- меню администрирования -------------<br/>
 <div class="btn-group" role="group">
   <%= link_to 'Управление меню',  product_types_path %> ||
-  <%= link_to 'Заказы групповые', group_orders_admin_index_path  %> ||
+  <%= link_to 'Заказы одиночные', single_orders_path  %> ||
   <%= link_to 'Заказы групповые', group_orders_admin_index_path  %>
 </div> 
