add export group orders

--- a/app/views/group_orders_admin/index.html.erb
+++ b/app/views/group_orders_admin/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Просмотр всех групповых заказов</h1>
+<%= link_to 'Экспорт групповых заказов в CSV', group_orders_admin_index_path(format: "csv") %>
 
 <div id="single-orders_table">
   <table class="table table-border table-hover">
@@ -17,3 +18,4 @@
   <% end %>
   </table>
 </div>
+
