--- a/app/views/group_line_items/_group_line_item.html.erb
+++ b/app/views/group_line_items/_group_line_item.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr id="group_line_item_<%= group_line_item.id %>">
   <td><%= group_line_item.product.title %></td>
   <td><%= group_line_item.product.description %></td>
   <td>заказал клиент <%= group_line_item.user.name %></td>
@@ -9,7 +9,7 @@
   	<%= my_number_to_currency(group_line_item.total_price) %> |
     <%= link_to fa_icon('pencil-square-o') + 'ред', edit_group_line_item_path(id: group_line_item.id) %> |
     <%= link_to fa_icon('window-close-o') + 'удал', group_line_item_path(id: group_line_item.id),
-    	method: :delete, data: {confirm: 'удалить товар из заказа?'}, 
+    	method: :delete, data: {confirm: 'удалить товар из заказа?', remote: true}, 
     	style: "color: red" %>
   </td>
   
