waiting for comments

--- a/app/views/group_carts/_group_cart.html.erb
+++ b/app/views/group_carts/_group_cart.html.erb
@@ -19,3 +19,24 @@
 	class: 'btn btn-danger btn-sm' %> |
 <%= button_to 'Оформить заказ', new_group_order_path, method: :get,
 	class: 'btn btn-success btn-sm' %> |
+
+
+<script>
+	/*
+  function show() {
+    $.ajax({ 
+      url: "group_line_items/group_line_item",
+      cache: false,
+      success: function(html){
+      	$('#table').html(html);
+      }
+    })
+  }
+
+
+  $(document).ready(function(){
+  	show();
+  	setInterval('show()', 5000);
+  });
+*/
+</script>
