--- a/app/views/group_store/index.html.erb
+++ b/app/views/group_store/index.html.erb
@@ -3,8 +3,9 @@
 <br/>
 
 <b>Текущая группа: <%= @group.name %> | </b>
+<%= link_to 'Просмотр группы', group_path(id: @group.id) %> |
 <%= link_to 'Заказ группы', group_cart_path(group_id: @group.id, id: @group_cart.id)  %> | 
-<%= link_to 'Выйти из группового заказа', root_path %>
+<%= link_to 'Выйти из группы к одиночному заказу', root_path %>
 <br/>
 
 <hr/>
