add products quantity and price

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,11 +29,16 @@
       <% end %>
 
       <% if @group_cart %>
+      <ul>
         <li class="nav-item">
           <%= link_to '| Корзина группы ' + @group_cart.group.name+ ' |', 
           group_cart_path(group_id: @group.id, id: @group_cart.id), 
           class: 'btn btn-success btn-sm' %>
         </li>
+        <li id="cart_info">
+          товаров <%= @quantity %> на сумму <%= my_number_to_currency(@price) %>
+        </li>
+      </ul>
       <% end %>
 
       <% if user_admin %>
