--- a/app/views/group_line_items/create.js.erb
+++ b/app/views/group_line_items/create.js.erb
@@ -1,3 +1,3 @@
 alert('aaa');
 
-$('#cart_info').html('блюд ' + <%= @quantity %> + ' на сумму ' + >%= @price %>);
+$('#cart_info').html('блюд ' + <%= @quantity %> + ' на сумму ' + <%= @price %>);
